feat(config): habilitar perfil prod y CORS parametrizable para frontend